--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "next": "^5.0.0",
+    "pica": "^4.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
