--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "new_iconfist",
+  "name": "liv_tiler",
   "version": "1.0.0",
-  "description": "Create chrome extension icons quickly",
+  "description": "Create tiles from an image",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
