--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "dev": "next",
     "start": "next start",
-    "build": "next build"
+    "build": "next build && next export",
+    "deploy": "now out -A ../package.json"
   },
   "devDependencies": {
     "eslint": "^4.19.0"
